--- a/package.json
+++ b/package.json
@@ -13,5 +13,29 @@
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.0.0",
         "vite": "^7.0.7"
+    },
+    "name": "localhost.rg",
+    "version": "1.0.0",
+    "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img src=\"https://raw.githubusercontent.com/laravel/art/master/logo-lockup/5%20SVG/2%20CMYK/1%20Full%20Color/laravel-logolockup-cmyk-red.svg\" width=\"400\" alt=\"Laravel Logo\"></a></p>",
+    "main": "vite.config.js",
+    "directories": {
+        "test": "tests"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/pinglove/rivergate.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/pinglove/rivergate/issues"
+    },
+    "homepage": "https://github.com/pinglove/rivergate#readme",
+    "dependencies": {
+        "amazon-sp-api": "^1.2.0",
+        "dotenv": "^17.2.3",
+        "iconv-lite": "^0.7.2",
+        "mysql2": "^3.16.1"
     }
 }
