--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "jeffersongoncalves/filament-topbar": "^1.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "rupadana/filament-slider": "^1.0",
         "spatie/laravel-permission": "^6.24"
     },
     "require-dev": {
